fabric/testdata/out/ing_spp-product-identity-put-internal-product-identities-skus-users-all-spp-product-identity-master-573.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"https://identity.zalando.com/managed-id\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/internal-product-identities/skus\") \u0026\u0026 Method(\"PUT\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"etoraman\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"dd881b95-f979-11e8-968d-026f86c7c91a","deployment-id":"d-axm9b9h4emne2icuau68ss53s","pipeline-id":"l-gqkrnfckkaunnp4hd1ria2jz5"},"name":"spp-product-identity-put-internal-product-identities-skus-users-all-spp-product-identity-master-573","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity-master-573.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-identity-m [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(4) && Path("/internal-product-identities/skus")
      && Method("PUT") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "etoraman") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-11-01T13:51:17Z"
  generation: 1
  labels:
    controller-uid: dd881b95-f979-11e8-968d-026f86c7c91a
    deployment-id: d-axm9b9h4emne2icuau68ss53s
    pipeline-id: l-gqkrnfckkaunnp4hd1ria2jz5
  name: spp-product-identity-put-internal-product-identities-skus-users-all-spp-product-identity-master-573
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity
    uid: dd881b95-f979-11e8-968d-026f86c7c91a
  resourceVersion: "1383841590"
  uid: 22992558-95ee-4dcb-8279-dda45754444b
spec:
  rules:
  - host: spp-product-identity-master-573.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
